Gaston Yebra - Project/force-app/main/default/objects/Client__c/fields/Advisor_Number__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Number__c</fullName>
    <externalId>true</externalId>
    <label>Advisor Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>