Gaston Yebra - Project/force-app/main/default/objects/Client__c/fields/Imported__c.field-meta.xml
<CustomField>
    <fullName>Imported__c</fullName>
    <defaultValue>false</defaultValue>
    <description>si esta checkeado significa que viene de Heroku</description>
    <label>Imported</label>
    <type>Checkbox</type>
</CustomField>